--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ dependencies {
     // firebase
     implementation platform('com.google.firebase:firebase-bom:30.2.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    //viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
+    implementation 'me.relex:circleindicator:2.1.6'
+    implementation("com.tbuonomo:dotsindicator:4.3")
+
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
